--- a/IndicatorsManagerApp/src/app/user-indicator-active/user-indicator-active.component.css
+++ b/IndicatorsManagerApp/src/app/user-indicator-active/user-indicator-active.component.css
@@ -46,7 +46,7 @@
     transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   }
   
-button mat-icon{
+button{
   width: 24px;
   height: 24px;
   transform: scale(1.5);
@@ -56,6 +56,15 @@ div span{
   font-size: 20px;
 }
 
+
 div.example-box:hover{
   background-color: #dadada;
+}
+
+div.example-box:hover button.icon-hover {
+  display: inline;
+}
+
+button.icon-hover{
+  display: none;
 }
