header fixed for admin

--- a/IndicatorsManagerApp/src/app/header/header.component.html
+++ b/IndicatorsManagerApp/src/app/header/header.component.html
@@ -39,5 +39,6 @@
   <mat-menu #reports="matMenu">
     <button mat-menu-item routerLink="/reports/hidden-indicators">Top Hidden Indicators</button>
     <button mat-menu-item routerLink="/reports/frequent-users">Most Frequent Logged in Users</button>
+    <button mat-menu-item routerLink="/reports/log">Show Log</button>
   </mat-menu>
 </mat-toolbar>
