home fixed for admin

--- a/IndicatorsManagerApp/src/app/home/home.component.html
+++ b/IndicatorsManagerApp/src/app/home/home.component.html
@@ -4,6 +4,12 @@
     <app-user-indicator-active></app-user-indicator-active>
 </ng-container>
 <ng-template #adminTemplate>
-    <h2>Welcome {{currentUserName}}</h2>
+    <div class="container">
+        <div class="row mt-4">
+            <div class="col">
+                <h2 class="title">Welcome {{currentUser.username}}</h2>
+            </div>
+        </div>
+    </div>
 </ng-template>
 
